# gb

./: .gitignore  .gitmodules  AGENTS.md  COMPILATION_FIXES_SUMMARY.md  Cargo.toml  DEPENDENCIES-DEV.sh  DEPENDENCIES.sh  I18N_STRATEGY.md  IMPROVE.md  PENDING_TASKS.md  PROMPT.md  README.md  TASK.md  TASKS.md  TASKS_backup.md  TODO-SECURITY-PROTECTION.md  TODO.md  UI.md  console-errors.txt  console-i18n.json  console-output-after-fix.txt  inspect.js  package-lock.json  package.json  prod-console-test.json  prod-console.json  prod-network.json  reset.sh  restart.sh  start.bas  stop.sh  tasks.md  test_begin_blocks.bas  test_cron.rs  zap.md
.cargo/: config.toml
.forgejo/workflows/: botserver.yaml
.kiro/settings/: lsp.json
.zed/: settings.json
botserver-stack/conf/drive/certs/: private.key
botserver-stack/conf/system/certificates/api/: server.crt  server.key
botserver-stack/conf/system/certificates/botserver/: client.crt  client.key
botserver-stack/conf/system/certificates/ca/: ca.key
botserver-stack/conf/system/certificates/cache/: server.crt  server.key
botserver-stack/conf/system/certificates/caddy/: ca.crt  server.crt  server.key
botserver-stack/conf/system/certificates/directory/: server.crt  server.key
botserver-stack/conf/system/certificates/drive/: server.crt  server.key
botserver-stack/conf/system/certificates/email/: server.crt  server.key
botserver-stack/conf/system/certificates/embedding/: server.crt  server.key
botserver-stack/conf/system/certificates/llm/: server.crt  server.key
botserver-stack/conf/system/certificates/meet/: server.crt  server.key
botserver-stack/conf/system/certificates/tables/: server.crt  server.key
botserver-stack/conf/system/certificates/vault/: server.crt  server.key
botserver-stack/conf/system/certificates/vectordb/: server.crt  server.key
botserver-stack/conf/vault/: config.hcl
config/: directory_config.json
scripts/: check-i18n.sh
