[workspace]
resolver = "2"
members = [
    "botapp",
    "botdevice",
    "botlib",
    "botserver",
    "bottest",
    "botui",
]

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"
unsafe_code = "deny"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
panic = "warn"
todo = "warn"
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
multiple_crate_versions = "allow"
future_not_send = "allow"
similar_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"


[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
overflow-checks = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
debug = false

[profile.low-memory]
inherits = "release"
lto = "thin"
codegen-units = 16
debug = false
incremental = false
opt-level = "s"

[profile.dev]
debug = 0
incremental = true
codegen-units = 256
opt-level = 0
