
[workspace]
resolver = "2"
members = [
    "botapp",
    "botdevice",
    "botlib",
    "botserver",
    "bottest",
    "botui",
]

[workspace.lints.rust]

[workspace.lints.clippy]

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 8
overflow-checks = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 8
debug = false

[profile.low-memory]
inherits = "release"
lto = "thin"
codegen-units = 16
debug = false
incremental = false
opt-level = "s"

[profile.dev]
debug = 1
incremental = true
codegen-units = 32
opt-level = 0
